[tool.poetry]
name = "classopt"
version = "0.1.9"
description = "Arguments parser with class for Python, inspired by StructOpt"
authors = ["moisutsu <moisutsu@gmail.com>"]
readme = "README.md"
repository = "https://github.com/moisutsu/classopt"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
