[tool.poetry]
name = "classopt"
version = "0.1.9"
description = "Arguments parser with class for Python, inspired by StructOpt"
authors = ["moisutsu <moisutsu@gmail.com>"]
readme = "README.md"
repository = "https://github.com/moisutsu/classopt"

[tool.poetry.dependencies]
python = "^3.7"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^6.4.3"}


[tool.coverage.run]
parallel = true

[tool.coverage.paths]
source = [
    "classopt",
    "/home/runner/work/classopt/classopt/classopt", # for Linux
    "/System/Volumes/Data/home/runner/work/classopt/classopt/classopt/", # for macOS
    "/Users/runner/work/classopt/classopt/classopt", # for macOS
    "D:\\a\\classopt\\classopt\\classopt", # windows
]

[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING:",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
